@@ -171,8 +171,8 @@ class ApiFileRevert extends ApiBase {
 
 	public function getExamples() {
 		return array(
-			'Revert Wiki.png to the version of 20110305152740:',
-			'    api.php?action=filerevert&filename=Wiki.png&comment=Revert&archivename=20110305152740!Wiki.png&token=+\\',
+			'api.php?action=filerevert&filename=Wiki.png&comment=Revert&archivename=20110305152740!Wiki.png&token=+\\'
+				=> 'Revert Wiki.png to the version of 20110305152740',
 		);
 	}
 
