@@ -282,9 +282,10 @@ class ApiQueryFilearchive extends ApiQueryBase {
 
 	public function getExamples() {
 		return array(
-			'Simple Use',
-			' Show a list of all deleted files',
-			'  api.php?action=query&list=filearchive',
+			'api.php?action=query&list=filearchive' => array(
+				'Simple Use',
+				'Show a list of all deleted files',
+			),
 		);
 	}
 
